# child_tracker_auth

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASK.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
app/app/: __main__.py  main.py  prestart.py
app/app/app/: app.py  crud.py  db.py  loguru_logger.py  models.py  settings.py  users.py
app/app/app/auth/: backend.py  jwt.py
app/app/app/email/: manager.py
app/app/app/users/: create_user.py  database.py  manager.py
app/app/migration/: env.py
child_tracker_auth/: __init__.py  __main__.py  log.py  middleware.py  schemas.py  settings.py
child_tracker_auth/data/: regions.json
child_tracker_auth/db/: base.py  enums.py  utils.py
child_tracker_auth/db/dao/: dummy_dao.py
child_tracker_auth/db/models/: __init__.py  dummy_model.py
child_tracker_auth/security/: crypto.py  oauth2.py  token.py
child_tracker_auth/services/: __init__.py
child_tracker_auth/storage/: dependencies.py  service.py
child_tracker_auth/templates/: email_verification.html
child_tracker_auth/utils/: database_utils.py  email.py  mailer_utils.py  sa_to_pydantic.py  sms.py  token_utils.py
child_tracker_auth/web/: __init__.py  application.py  lifespan.py
child_tracker_auth/web/api/: __init__.py  const.py  deps.py  router.py
child_tracker_auth/web/api/auth/: __init__.py  views.py
child_tracker_auth/web/api/devices/: views.py
child_tracker_auth/web/api/member/: views.py
child_tracker_auth/web/api/monitoring/: __init__.py
child_tracker_auth/web/api/settings/: views.py
child_tracker_auth/web/api/utils/: views.py
child_tracker_auth/web/api/ws/: views.py
deploy/: docker-compose.dev.yml
lib/fastapi-users/docs/: installation.md
lib/fastapi-users/docs/configuration/: oauth.md  overview.md  schemas.md
lib/fastapi-users/docs/configuration/routers/: index.md
lib/fastapi-users/docs/usage/: flow.md
query/: select.sh
scripts/: exec_mysqldump.sh  migration.sql  restore.sh  upload_dump.sql_here.md
scripts/initdb/: migration.sql  restore.sh
tests/: __init__.py  conftest.py
