[tool.poetry]
name = "child_tracker_auth"
version = "0.1.0"
description = "auth service"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
alembic = "^1.13.2"
uvicorn = "^0.30.5"
databases = {extras = ["aiomysql"], version = "^0.9.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
